--- a/conf/pureftpd-mysql.conf
+++ b/conf/pureftpd-mysql.conf
@@ -2,7 +2,7 @@
 # Lines with MMYSQLServer and MYSQLPort.
 # If you want to use the Port methode comment out the MYSQLSocket line
 #//IMPORTENT!!!If display 530 error,please check the following MYSQL parameter!!
-MYSQLSocket     /data/mysql.sock
+MYSQLSocket     /data/mysql/mysql.sock
 MYSQLServer     localhost
 MYSQLPort       3306
 MYSQLUser       ftp
