--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -20,7 +20,7 @@ http {
     sendfile        on;
     tcp_nopush     on;
     keepalive_timeout  60;
-    #server_tokens off;
+    server_tokens off;
     tcp_nodelay on;
 
 #tomcat add start
