--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -64,7 +64,7 @@ http {
         server_name    _;
         access_log     /dev/null;
         root /data/admin;
-        index index.php;
+        index index.html index.php;
         location ~ .*\.(php|php5)?$  {
         #fastcgi_pass  unix:/tmp/php-cgi.sock;
               fastcgi_pass  127.0.0.1:9000;
@@ -80,4 +80,7 @@ http {
                 expires      1h;
                 }
         }
+
+##########################vhost#####################################
+	include vhost/*.conf;
 }
