--- a/conf/pureftpd-mysql.conf
+++ b/conf/pureftpd-mysql.conf
@@ -3,7 +3,7 @@
 # If you want to use the Port methode comment out the MYSQLSocket line
 #//IMPORTENT!!!If display 530 error,please check the following MYSQL parameter!!
 MYSQLSocket     /data/mysql/mysql.sock
-MYSQLServer     localhost
+MYSQLServer     127.0.0.1 
 MYSQLPort       3306
 MYSQLUser       ftp
 MYSQLPassword   tmppasswd 
