--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -63,7 +63,7 @@ http {
         listen  80;
         server_name    _;
         access_log     /dev/null;
-        root /data/admin;
+        root /home/wwwroot;
         index index.html index.php;
         location ~ .*\.(php|php5)?$  {
         #fastcgi_pass  unix:/tmp/php-cgi.sock;
