--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -62,7 +62,7 @@ http {
         server {
         listen  80;
         server_name    _;
-        access_log     /dev/null;
+        access_log    off;
         root /home/wwwroot;
         index index.html index.php;
         location ~ .*\.(php|php5)?$  {
