--- a/conf/wordpress.conf
+++ b/conf/wordpress.conf
@@ -9,3 +9,4 @@ if (-f $request_filename/index.php){
 if (!-f $request_filename){
         rewrite (.*) /index.php;
 }
+rewrite /wp-admin$ $scheme://$host$uri/ permanent;
