--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -2,7 +2,7 @@ user  www www;
 worker_processes  4;
 
 error_log  logs/error.log crit;
-pid        logs/nginx.pid;
+pid        /var/run/nginx.pid;
 worker_rlimit_nofile 51200;
 
 events {
