update default php dir and ftp manager chinese

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,7 +1,7 @@
 user  www www;
 worker_processes  4;
 
-error_log  logs/error.log crit;
+error_log  /home/wwwlogs/nginx_error.log crit;
 pid        /var/run/nginx.pid;
 worker_rlimit_nofile 51200;
 
@@ -62,8 +62,8 @@ http {
         server {
         listen  80;
         server_name    _;
-        access_log    off;
-        root /home/wwwroot;
+        access_log    /home/wwwlogs/access.log combined;
+        root /home/wwwroot/default;
         index index.html index.php;
         if ( $query_string ~* ".*[\;'\<\>].*" ){
                 return 404;
