--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -46,12 +46,13 @@ http {
 	fastcgi_temp_file_write_size 128k;
 
 	gzip  on;
+	gzip_disable "msie6";
+	gzip_vary on;
+	gzip_comp_level 2;
 	gzip_min_length  1k;
 	gzip_buffers     4 16k;
 	gzip_http_version 1.1;
-	gzip_comp_level 2;
 	gzip_types       text/plain application/x-javascript text/css application/xml;
-	gzip_vary on;
 
 	limit_rate_after 3m;
 	limit_rate 512k;
