--- a/options.conf
+++ b/options.conf
@@ -1,7 +1,9 @@
-# Run with DIR as the current working directory 
+# Operating environment for the current working directory
+# Операционная среда для, текущий рабочий каталог
+# 运行环境为当前的工作目录
 lnmp_dir=
 
-# 
+# install directory 
 nginx_install_dir=/usr/local/nginx
 
 mysql_install_dir=/usr/local/mysql
@@ -15,20 +17,28 @@ memcached_install_dir=/usr/local/memcached
 
 redis_install_dir=/usr/local/redis
 
-# Database data storage directory, you can customize 
+# Database data storage directory,You can freely specify
+# База данных для хранения данных каталога, вы можете свободно указать 
+# 数据库数据存储目录，你可以自由指定
 mysql_data_dir=/data/mysql
 mariadb_data_dir=/data/mariadb
 
-# 
+# Web directory, you can customize,Which default directory to store ftp.(User_manager_for-PureFTPd Proposal to modify the name for security)
+# Веб-каталог, вы можете настроить, какой по умолчанию каталог для хранения FTP. (User_manager_for-PureFTPd предложение об изменении названия для безопасности) 
+# 网站目录可以自行定义，其中default 目录存放ftp (User_manager_for-PureFTPd 建议修改名称为了安全)
 home_dir=/home/wwwroot
-# Nginx Generate a log storage directory, you can customize
+
+# Nginx Generate a log storage directory, you can freely specify.
+# Nginx создать каталог для хранения журнала, вы можете свободно указать 
+# Nginx生成日志存放目录，你可以自由指定
 wwwlogs_dir=/home/wwwlogs
+
 # 
 db_install_dir=
 #
 db_data_dir=
 
-#  
+# database password 
 dbrootpwd=
 # 
 ftpmanagerpwd=
