--- a/options.conf
+++ b/options.conf
@@ -1,9 +1,9 @@
 # Operating environment for the current working directory
 # Операционная среда для, текущий рабочий каталог
-# 运行环境为当前的工作目录
+# 运行环境为当前的工作目录,自动生成
 lnmp_dir=
 
-# install directory 
+# 预定义目录 
 nginx_install_dir=/usr/local/nginx
 
 mysql_install_dir=/usr/local/mysql
@@ -33,15 +33,17 @@ home_dir=/home/wwwroot
 # Nginx生成日志存放目录，你可以自由指定
 wwwlogs_dir=/home/wwwlogs
 
-# 
+# 以下参数自动生成,不需要修改
+# 数据库安装路径,自动生成 
 db_install_dir=
-#
+# 数据库数据库目录,自动生成
 db_data_dir=
 
-# database password 
+# 数据库root密码,自动生成 
 dbrootpwd=
-# 
+
+# ftp web后台管理员密码,自动生成 
 ftpmanagerpwd=
 
-# 
+# 连接ftpusers数据库密码,自动生成 
 conn_ftpusers_dbpwd=
