--- a/options.conf
+++ b/options.conf
@@ -5,6 +5,7 @@ lnmp_dir=
 
 # 预定义目录 
 nginx_install_dir=/usr/local/nginx
+tengine_install_dir=/usr/local/nginx
 
 mysql_install_dir=/usr/local/mysql
 mariadb_install_dir=/usr/local/mariadb
@@ -17,6 +18,7 @@ memcached_install_dir=/usr/local/memcached
 
 redis_install_dir=/usr/local/redis
 
+#############################################################################
 # Database data storage directory,You can freely specify
 # База данных для хранения данных каталога, вы можете свободно указать 
 # 数据库数据存储目录，你可以自由指定
@@ -33,9 +35,14 @@ home_dir=/home/wwwroot
 # Nginx生成日志存放目录，你可以自由指定
 wwwlogs_dir=/home/wwwlogs
 
+#############################################################################
 # 以下参数自动生成,不需要修改
+# Web服务器安装目录,自动生成
+web_install_dir=
+
 # 数据库安装路径,自动生成 
 db_install_dir=
+
 # 数据库数据库目录,自动生成
 db_data_dir=
 
