--- a/options.conf
+++ b/options.conf
@@ -9,6 +9,7 @@ tengine_install_dir=/usr/local/tengine
 
 mysql_install_dir=/usr/local/mysql
 mariadb_install_dir=/usr/local/mariadb
+percona_install_dir=/usr/localm/percona
 
 php_install_dir=/usr/local/php
 
@@ -24,6 +25,7 @@ redis_install_dir=/usr/local/redis
 # 数据库数据存储目录，你可以自由指定
 mysql_data_dir=/data/mysql
 mariadb_data_dir=/data/mariadb
+percona_data_dir=/data/percona
 
 # Web directory, you can customize,Which default directory to store ftp.(User_manager_for-PureFTPd Proposal to modify the name for security)
 # Веб-каталог, вы можете настроить, какой по умолчанию каталог для хранения FTP. (User_manager_for-PureFTPd предложение об изменении названия для безопасности) 
