--- a/options.conf
+++ b/options.conf
@@ -1,11 +1,10 @@
-# Operating environment for the current working directory
-# Операционная среда для, текущий рабочий каталог
-# 运行环境为当前的工作目录,自动生成
+# operating environment for the current working directory
 lnmp_dir=
 
-# 预定义目录 
+# set the default install path, you can freely specify
 nginx_install_dir=/usr/local/nginx
 tengine_install_dir=/usr/local/tengine
+apache_install_dir=/usr/local/apache
 
 mysql_install_dir=/usr/local/mysql
 mariadb_install_dir=/usr/local/mariadb
@@ -19,40 +18,29 @@ memcached_install_dir=/usr/local/memcached
 
 redis_install_dir=/usr/local/redis
 
-#############################################################################
-# Database data storage directory,You can freely specify
-# База данных для хранения данных каталога, вы можете свободно указать 
-# 数据库数据存储目录，你可以自由指定
+#########################################################################
+# database data storage directory, you can freely specify
 mysql_data_dir=/data/mysql
 mariadb_data_dir=/data/mariadb
 percona_data_dir=/data/percona
 
-# Web directory, you can customize,Which default directory to store ftp.(User_manager_for-PureFTPd Proposal to modify the name for security)
-# Веб-каталог, вы можете настроить, какой по умолчанию каталог для хранения FTP. (User_manager_for-PureFTPd предложение об изменении названия для безопасности) 
-# 网站目录可以自行定义，其中default 目录存放ftp (User_manager_for-PureFTPd 建议修改名称为了安全)
+# web directory, you can customize, which default directory to store ftp.
+# (User_manager_for-PureFTPd Proposal to modify the name for security)
 home_dir=/home/wwwroot
 
-# Nginx Generate a log storage directory, you can freely specify.
-# Nginx создать каталог для хранения журнала, вы можете свободно указать 
-# Nginx生成日志存放目录，你可以自由指定
+# nginx Generate a log storage directory, you can freely specify.
 wwwlogs_dir=/home/wwwlogs
 
-#############################################################################
-# 以下参数自动生成,不需要修改
-# Web服务器安装目录,自动生成
+#########################################################################
+# automatically generated, You can't change 
 web_install_dir=
 
-# 数据库安装路径,自动生成 
 db_install_dir=
 
-# 数据库数据库目录,自动生成
 db_data_dir=
 
-# 数据库root密码,自动生成 
 dbrootpwd=
 
-# ftp web后台管理员密码,自动生成 
 ftpmanagerpwd=
 
-# 连接ftpusers数据库密码,自动生成 
 conn_ftpusers_dbpwd=
