--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -71,7 +71,8 @@ http {
 	        }
 
         location ~ .*\.(php|php5)?$  {
-		fastcgi_pass  127.0.0.1:9000;
+		#fastcgi_pass  remote_php_ip:9000;
+	        fastcgi_pass unix:/dev/shm/php-cgi.sock;
 		fastcgi_index index.php;
 		include fastcgi.conf;
 		}
