Add Apache-2.4 and Apache-2.2, You can freely choose to install lnmp,lamp,lanmp

--- a/conf/nginx_apache.conf
+++ b/conf/nginx_apache.conf
@@ -23,6 +23,21 @@ http {
 	server_tokens off;
 	tcp_nodelay on;
 
+	proxy_connect_timeout 300s;
+	proxy_send_timeout 900;
+	proxy_read_timeout 900;
+	proxy_buffer_size 32k;
+	proxy_buffers 4 64k;
+	proxy_busy_buffers_size 128k;
+	proxy_redirect off;
+	proxy_hide_header Vary;
+	proxy_set_header Accept-Encoding '';
+	proxy_set_header Host $host;
+	proxy_set_header Referer $http_referer;
+	proxy_set_header Cookie $http_cookie;
+	proxy_set_header X-Real-IP $remote_addr;
+	proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+
 	fastcgi_connect_timeout 300;
 	fastcgi_send_timeout 300;
 	fastcgi_read_timeout 300;
@@ -51,11 +66,17 @@ http {
                 return 404;
 	        }
 
+	location / {
+		try_files $uri @apache;
+		}
+
+	location @apache {
+		internal;
+		proxy_pass http://127.0.0.1:8080;
+		}
+
         location ~ .*\.(php|php5)?$  {
-		#fastcgi_pass remote_php_ip:9000;
-	        fastcgi_pass unix:/dev/shm/php-cgi.sock;
-		fastcgi_index index.php;
-		include fastcgi.conf;
+		proxy_pass http://127.0.0.1:8080;
 		}
 
         location ~ .*\.(htm|html|gif|jpg|jpeg|png|bmp|swf|ioc|rar|zip|txt|flv|mid|doc|ppt|pdf|xls|mp3|wma)$ {
