optimize MySQL and update php to 5.5.6

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -58,12 +58,12 @@ http {
 		include fastcgi.conf;
 		}
 
-        location ~ .*\.(htm|html|gif|jpg|jpeg|png|bmp|swf|ioc|rar|zip|txt|flv|mid|doc|ppt|pdf|xls|mp3|wma)$ {
+        location ~ .*\.(gif|jpg|jpeg|png|bmp|swf|flv|ico)$ {
 		expires 30d;
 	        }
 
         location ~ .*\.(js|css)?$ {
-                expires 1h;
+                expires 7d;
                 }
         }
 
