--- a/conf/nginx_apache.conf
+++ b/conf/nginx_apache.conf
@@ -79,12 +79,12 @@ http {
 		proxy_pass http://127.0.0.1:8080;
 		}
 
-        location ~ .*\.(htm|html|gif|jpg|jpeg|png|bmp|swf|ioc|rar|zip|txt|flv|mid|doc|ppt|pdf|xls|mp3|wma)$ {
-		expires 30d;
-	        }
+        location ~ .*\.(gif|jpg|jpeg|png|bmp|swf|flv|ico)$ {
+                expires 30d;
+                }
 
         location ~ .*\.(js|css)?$ {
-                expires 1h;
+                expires 7d;
                 }
         }
 
