--- a/conf/wordpress.conf
+++ b/conf/wordpress.conf
@@ -1,12 +1,4 @@
-if (-f $request_filename/index.html){
-	rewrite (.*) $1/index.html break;
-	}
-
-if (-f $request_filename/index.php){
-        rewrite (.*) $1/index.php;
-	}
-
-if (!-f $request_filename){
-        rewrite (.*) /index.php;
+location / {
+	try_files $uri $uri/ /index.php?$args;
 	}
 rewrite /wp-admin$ $scheme://$host$uri/ permanent;
