update typecho rewrite

--- a/conf/typecho.conf
+++ b/conf/typecho.conf
@@ -4,6 +4,6 @@ if (-f $request_filename/index.html){
 if (-f $request_filename/index.php){
     rewrite (.*) $1/index.php;
 }
-if (!-f $request_filename){
+if (!-e $request_filename){
     rewrite (.*) /index.php;
 }
