--- a/options.conf
+++ b/options.conf
@@ -44,3 +44,18 @@ dbrootpwd=
 ftpmanagerpwd=
 
 conn_ftpusers_dbpwd=
+
+#########################################################################
+# Backup Dest directory, change this if you have someother location
+backup_dir=/home/backup
+
+# How many days before the backup directory will be removed
+expired_days=5
+
+db_name=
+
+website_name=
+
+local_bankup_yn=y
+
+remote_bankup_yn=n
