enable nginx gzip js

--- a/conf/nginx_apache.conf
+++ b/conf/nginx_apache.conf
@@ -53,7 +53,7 @@ http {
 	gzip_min_length 1k;
 	gzip_buffers 4 16k;
 	gzip_http_version 1.1;
-	gzip_types text/plain application/x-javascript text/css application/xml;
+	gzip_types text/plain application/x-javascript text/css application/xml application/javascript;
 
 ###################pureftpd AND phpmyadmin############################
         server {
