disable ngx_pagespeed

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,5 +1,5 @@
 user www www;
-worker_processes 4;
+worker_processes auto;
 
 error_log /home/wwwlogs/error_nginx.log crit;
 pid /var/run/nginx.pid;
