--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,5 +1,5 @@
 user www www;
-worker_processes 4;
+worker_processes auto;
 
 error_log /home/wwwlogs/error_nginx.log crit;
 pid /var/run/nginx.pid;
@@ -16,7 +16,7 @@ http {
 	server_names_hash_bucket_size 128;
 	client_header_buffer_size 32k;
 	large_client_header_buffers 4 32k;
-	client_max_body_size 8m;
+	client_max_body_size 50m;
 	sendfile on;
 	tcp_nopush on;
 	keepalive_timeout 120;
@@ -38,7 +38,7 @@ http {
 	gzip_min_length 1k;
 	gzip_buffers 4 16k;
 	gzip_http_version 1.1;
-	gzip_types text/plain application/x-javascript text/css application/xml;
+	gzip_types text/plain application/x-javascript text/css application/xml application/javascript;
 
 ###################pureftpd AND phpmyadmin############################
         server {
