update php version

--- a/conf/nginx_apache.conf
+++ b/conf/nginx_apache.conf
@@ -46,14 +46,28 @@ http {
 	fastcgi_busy_buffers_size 128k;
 	fastcgi_temp_file_write_size 128k;
 
-	gzip on;
-	gzip_disable "msie6";
-	gzip_vary on;
-	gzip_comp_level 2;
-	gzip_min_length 1k;
-	gzip_buffers 4 16k;
-	gzip_http_version 1.1;
-	gzip_types text/plain application/x-javascript text/css application/xml application/javascript;
+#Gzip Compression
+        gzip on;
+        gzip_buffers 16 8k;
+        gzip_comp_level 6;
+        gzip_http_version 1.1;
+        gzip_min_length 256;
+        gzip_proxied any;
+        gzip_vary on;
+        gzip_types
+            text/xml application/xml application/atom+xml application/rss+xml application/xhtml+xml image/svg+xml
+            text/javascript application/javascript application/x-javascript
+            text/x-json application/json application/x-web-app-manifest+json
+            text/css text/plain text/x-component
+            font/opentype application/x-font-ttf application/vnd.ms-fontobject
+            image/x-icon;
+        gzip_disable  "msie6";
+
+#If you have a lot of static files to serve through Nginx then caching of the files' metadata (not the actual files' contents) can save some latency.
+        open_file_cache max=1000 inactive=20s;
+        open_file_cache_valid 30s;
+        open_file_cache_min_uses 2;
+        open_file_cache_errors on;
 
 ###################pureftpd AND phpmyadmin############################
         server {
