Nginx Apache and PHP-FPM process is run as $run_user(Default "www"), you can freely specify

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,9 @@
 # operating environment for the current working directory
 lnmp_dir=
 
+# Nginx Apache and PHP-FPM process is run as $run_user(Default "www"), you can freely specify
+run_user=www
+
 # set the default install path, you can freely specify
 nginx_install_dir=/usr/local/nginx
 tengine_install_dir=/usr/local/tengine
