Changed Pure-FTPd installation

--- a/conf/pure-ftpd.conf
+++ b/conf/pure-ftpd.conf
@@ -113,7 +113,7 @@ MaxIdleTime                 15
 
 # MySQL configuration file (see README.MySQL)
 
-MySQLConfigFile               /usr/local/pureftpd/pureftpd-mysql.conf
+# MySQLConfigFile               /usr/local/pureftpd/etc/pureftpd-mysql.conf
 
 
 # Postgres configuration file (see README.PGSQL)
@@ -123,7 +123,7 @@ MySQLConfigFile               /usr/local/pureftpd/pureftpd-mysql.conf
 
 # PureDB user database (see README.Virtual-Users)
 
-# PureDB                        /etc/pureftpd.pdb
+PureDB                        /usr/local/pureftpd/etc/pureftpd.pdb
 
 
 # Path to pure-authd socket (see README.Authentication-Modules)
@@ -327,7 +327,7 @@ AnonymousCantUpload         no
 
 # Allow users to resume and upload files, but *NOT* to delete them.
 
-#KeepAllFiles                yes
+KeepAllFiles                yes
 
 
 
