--- a/options.conf
+++ b/options.conf
@@ -27,8 +27,7 @@ mysql_data_dir=/data/mysql
 mariadb_data_dir=/data/mariadb
 percona_data_dir=/data/percona
 
-# web directory, you can customize, which default directory to store ftp.
-# (User_manager_for-PureFTPd Proposal to modify the name for security)
+# web directory, you can customize
 home_dir=/home/wwwroot
 
 # nginx Generate a log storage directory, you can freely specify.
