FTP can't delete files

--- a/conf/pure-ftpd.conf
+++ b/conf/pure-ftpd.conf
@@ -327,7 +327,7 @@ AnonymousCantUpload         no
 
 # Allow users to resume and upload files, but *NOT* to delete them.
 
-KeepAllFiles                yes
+#KeepAllFiles                yes
 
 
 
