update PHP version

--- a/apps.conf
+++ b/apps.conf
@@ -18,9 +18,10 @@ percona_5_version=5.5.43-37.2
 
 # PHP
 php_3_version=5.3.29
-php_4_version=5.4.41
-php_5_version=5.5.25
-php_6_version=5.6.9
+php_4_version=5.4.42
+php_5_version=5.5.26
+php_6_version=5.6.10
+php_7_version=7.0.0alpha1
 
 zendopcache_version=7.0.5
 xcache_version=3.2.0
