Update php 7.0.0alpha1 to 7.0.0alpha2

--- a/options.conf
+++ b/options.conf
@@ -28,7 +28,7 @@ mariadb_data_dir=/data/mariadb
 percona_data_dir=/data/percona
 
 # web directory, you can customize
-home_dir=/home/wwwroot
+wwwroot_dir=/home/wwwroot
 
 # nginx Generate a log storage directory, you can freely specify.
 wwwlogs_dir=/home/wwwlogs
