--- a/apps.conf
+++ b/apps.conf
@@ -2,18 +2,21 @@
 # Web
 nginx_version=1.8.0
 tengine_version=2.1.0
-apache_2_version=2.2.29
-apache_4_version=2.4.12
+
+apache_2_version=2.2.31
+apache_4_version=2.4.16
 pcre_version=8.37
-apr_version=1.5.1
+apr_version=1.5.2
 apr_util_version=1.5.4
 
 # DB
-mysql_6_version=5.6.25
-mysql_5_version=5.5.44
+mysql_6_version=5.6.26
+mysql_5_version=5.5.45
+
 mariadb_10_version=10.0.20
 mariadb_5_version=5.5.44
-percona_6_version=5.6.25-73.0
+
+percona_6_version=5.6.25-73.1
 percona_5_version=5.5.44-37.3
 
 # PHP
@@ -36,7 +39,7 @@ mcrypt_version=2.6.8
 mhash_version=0.9.9.9
 
 # Ftp
-pureftpd_version=1.0.41
+pureftpd_version=1.0.42
 
 # Redis
 redis_version=3.0.3
@@ -51,6 +54,8 @@ memcache_pecl_version=2.2.7
 # phpMyadmin
 phpMyAdmin_version=4.4.12
 
-# malloc
-tcmalloc_version=2.4
+# jemalloc
 jemalloc_version=3.6.0
+
+# tcmalloc
+tcmalloc_version=2.4
