--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -6,75 +6,77 @@ pid /var/run/nginx.pid;
 worker_rlimit_nofile 51200;
 
 events {
-	use epoll;
-	worker_connections 51200;
-	}
+    use epoll;
+    worker_connections 51200;
+    }
 
 http {
-	include mime.types;
-	default_type application/octet-stream;
-	server_names_hash_bucket_size 128;
-	client_header_buffer_size 32k;
-	large_client_header_buffers 4 32k;
-	client_max_body_size 50m;
-	sendfile on;
-	tcp_nopush on;
-	keepalive_timeout 120;
-	server_tokens off;
-	tcp_nodelay on;
+    include mime.types;
+    default_type application/octet-stream;
+    server_names_hash_bucket_size 128;
+    client_header_buffer_size 32k;
+    large_client_header_buffers 4 32k;
+    client_max_body_size 50m;
+    sendfile on;
+    tcp_nopush on;
+    keepalive_timeout 120;
+    server_tokens off;
+    tcp_nodelay on;
+    
+    fastcgi_connect_timeout 300;
+    fastcgi_send_timeout 300;
+    fastcgi_read_timeout 300;
+    fastcgi_buffer_size 64k;
+    fastcgi_buffers 4 64k;
+    fastcgi_busy_buffers_size 128k;
+    fastcgi_temp_file_write_size 128k;
 
-	fastcgi_connect_timeout 300;
-	fastcgi_send_timeout 300;
-	fastcgi_read_timeout 300;
-	fastcgi_buffer_size 64k;
-	fastcgi_buffers 4 64k;
-	fastcgi_busy_buffers_size 128k;
-	fastcgi_temp_file_write_size 128k;
+    #Gzip Compression
+    gzip on;
+    gzip_buffers 16 8k;
+    gzip_comp_level 6;
+    gzip_http_version 1.1;
+    gzip_min_length 256;
+    gzip_proxied any;
+    gzip_vary on;
+    gzip_types
+        text/xml application/xml application/atom+xml application/rss+xml application/xhtml+xml image/svg+xml
+        text/javascript application/javascript application/x-javascript
+        text/x-json application/json application/x-web-app-manifest+json
+        text/css text/plain text/x-component
+        font/opentype application/x-font-ttf application/vnd.ms-fontobject
+        image/x-icon;
+    gzip_disable  "msie6";
 
-#Gzip Compression
-	gzip on;
-	gzip_buffers 16 8k;
-	gzip_comp_level 6;
-	gzip_http_version 1.1;
-	gzip_min_length 256;
-	gzip_proxied any;
-	gzip_vary on;
-	gzip_types
-	    text/xml application/xml application/atom+xml application/rss+xml application/xhtml+xml image/svg+xml
-	    text/javascript application/javascript application/x-javascript
-	    text/x-json application/json application/x-web-app-manifest+json
-	    text/css text/plain text/x-component
-	    font/opentype application/x-font-ttf application/vnd.ms-fontobject
-	    image/x-icon;
-	gzip_disable  "msie6";
+    #If you have a lot of static files to serve through Nginx then caching of the files' metadata (not the actual files' contents) can save some latency.
+    open_file_cache max=1000 inactive=20s;
+    open_file_cache_valid 30s;
+    open_file_cache_min_uses 2;
+    open_file_cache_errors on;
 
-#If you have a lot of static files to serve through Nginx then caching of the files' metadata (not the actual files' contents) can save some latency.
-        open_file_cache max=1000 inactive=20s;
-        open_file_cache_valid 30s;
-        open_file_cache_min_uses 2;
-        open_file_cache_errors on;
-
-###################pureftpd AND phpmyadmin############################
-        server {
-        listen 80;
-        server_name _;
-        access_log /home/wwwlogs/access_nginx.log combined;
-        root /home/wwwroot/default;
-        index index.html index.php;
-        location ~ .*\.(php|php5)?$ {
-		#fastcgi_pass remote_php_ip:9000;
-	        fastcgi_pass unix:/dev/shm/php-cgi.sock;
-		fastcgi_index index.php;
-		include fastcgi.conf;
-		}
-        location ~ .*\.(gif|jpg|jpeg|png|bmp|swf|flv|ico)$ {
-		expires 30d;
-	        }
-        location ~ .*\.(js|css)?$ {
-                expires 7d;
-                }
+################### demo(you can delete) ############################
+    server {
+    listen 80;
+    server_name _;
+    access_log /home/wwwlogs/access_nginx.log combined;
+    root /home/wwwroot/default;
+    index index.html index.php;
+    location ~ .*\.(php|php5)?$ {
+        #fastcgi_pass remote_php_ip:9000;
+        fastcgi_pass unix:/dev/shm/php-cgi.sock;
+        fastcgi_index index.php;
+        include fastcgi.conf;
         }
+    location ~ .*\.(gif|jpg|jpeg|png|bmp|swf|flv|ico)$ {
+        expires 30d;
+        access_log off;
+        }
+    location ~ .*\.(js|css)?$ {
+        expires 7d;
+        access_log off;
+        }
+    }
 
 ##########################vhost#####################################
-	include vhost/*.conf;
+    include vhost/*.conf;
 }
