--- a/apps.conf
+++ b/apps.conf
@@ -3,8 +3,8 @@
 nginx_version=1.9.5
 tengine_version=2.1.1
 
-tomcat_7_version=7.0.64
-tomcat_8_version=8.0.27
+tomcat_7_version=7.0.65
+tomcat_8_version=8.0.28
 
 apache_2_version=2.2.31
 apache_4_version=2.4.17
@@ -13,6 +13,7 @@ apr_version=1.5.2
 apr_util_version=1.5.4
 
 # DB
+mysql_7_version=5.7.9
 mysql_6_version=5.6.27
 mysql_5_version=5.5.46
 
@@ -50,7 +51,7 @@ mhash_version=0.9.9.9
 pureftpd_version=1.0.42
 
 # Redis
-redis_version=3.0.4
+redis_version=3.0.5
 redis_pecl_version=2.2.7
 
 # Memcached
@@ -60,10 +61,10 @@ memcached_pecl_version=2.2.0
 memcache_pecl_version=2.2.7
 
 # phpMyadmin
-phpMyAdmin_version=4.4.15
+phpMyAdmin_version=4.4.15.1
 
 # jemalloc
-jemalloc_version=4.0.3
+jemalloc_version=4.0.4
 
 # tcmalloc
 tcmalloc_version=2.4
