--- a/config/nginx_tomcat.conf
+++ b/config/nginx_tomcat.conf
@@ -60,18 +60,12 @@ http {
     server_name _;
     access_log /data/wwwlogs/access_nginx.log combined;
     root /data/wwwroot/default;
-    index index.html index.htm index.php;
+    index index.html index.htm index.jsp;
     location /nginx_status {
         stub_status on;
         access_log off;
         allow 127.0.0.1;
         deny all;
-        }
-    location ~ .*\.(php|php5)?$ {
-        #fastcgi_pass remote_php_ip:9000;
-        fastcgi_pass unix:/dev/shm/php-cgi.sock;
-        fastcgi_index index.php;
-        include fastcgi.conf;
         }
     location ~ .*\.(gif|jpg|jpeg|png|bmp|swf|flv|ico)$ {
         expires 30d;
@@ -80,6 +74,10 @@ http {
     location ~ .*\.(js|css)?$ {
         expires 7d;
         access_log off;
+        }
+    location ~ {
+        proxy_pass http://127.0.0.1:8080;
+        include proxy.conf;
         }
     }
 
