--- a/apps.conf
+++ b/apps.conf
@@ -1,10 +1,10 @@
 # newest software version
 # Web
-nginx_version=1.9.11
+nginx_version=1.9.12
 tengine_version=2.1.1
 
-tomcat_7_version=7.0.67
-tomcat_8_version=8.0.32
+tomcat_7_version=7.0.68
+tomcat_8_version=8.0.30
 
 apache_2_version=2.2.31
 apache_4_version=2.4.18
@@ -17,10 +17,11 @@ mysql_5_7_version=5.7.11
 mysql_5_6_version=5.6.29
 mysql_5_5_version=5.5.48
 
-mariadb_10_1_version=10.1.11
-mariadb_10_0_version=10.0.23
+mariadb_10_1_version=10.1.12
+mariadb_10_0_version=10.0.24
 mariadb_5_5_version=5.5.48
 
+percona_5_7_version=5.7.10-3
 percona_5_6_version=5.6.28-76.1
 percona_5_5_version=5.5.47-37.7
 
@@ -32,9 +33,9 @@ jdk_8_version=1.8.0_74
 # PHP
 php_3_version=5.3.29
 php_4_version=5.4.45
-php_5_version=5.5.32
-php_6_version=5.6.18
-php_7_version=7.0.3
+php_5_version=5.5.33
+php_6_version=5.6.19
+php_7_version=7.0.4
 
 zendopcache_version=7.0.5
 xcache_version=3.2.0
@@ -65,7 +66,7 @@ memcache_pecl_version=3.0.8
 phpMyAdmin_version=4.4.15.4
 
 # jemalloc
-jemalloc_version=4.0.4
+jemalloc_version=4.1.0
 
 # tcmalloc
-tcmalloc_version=2.4
+tcmalloc_version=2.4.90
