--- a/config/nginx_tomcat.conf
+++ b/config/nginx_tomcat.conf
@@ -60,6 +60,7 @@ http {
 ######################## default ############################
   server {
   listen 80;
+  listen [::]:80 ipv6only=on;
   server_name _;
   access_log /data/wwwlogs/access_nginx.log combined;
   root /data/wwwroot/default;
