--- a/options.conf
+++ b/options.conf
@@ -1,3 +1,6 @@
+# set the default timezone
+timezone=Asia/Shanghai
+
 # Nginx Apache and PHP-FPM process is run as $run_user(Default "www"), you can freely specify
 run_user=www
 
