Update lnmp from OneinStack

--- a/options.conf
+++ b/options.conf
@@ -19,6 +19,7 @@ pgsql_install_dir=/usr/local/pgsql
 mongo_install_dir=/usr/local/mongodb
 
 php_install_dir=/usr/local/php
+php_vn=56
 
 pureftpd_install_dir=/usr/local/pureftpd
 
@@ -69,7 +70,7 @@ backup_dir=/data/backup
 # How many days before the backup directory will be removed
 expired_days=5
 
-# local ; remote ; upyun ; local,upyun
+# local,remote,oss,cos,upyun,qiniu,s3,gdrive,dropbox
 backup_destination=
 
 # db ; web, You can't change
@@ -80,6 +81,9 @@ oss_bucket=
 
 # qiniu Bucket, You can't change
 qiniu_bucket=
+
+# Amazon S3 Bucket, You can't change
+s3_bucket=
 
 # The backup of the database, You can't change
 db_name=
