--- a/options.conf
+++ b/options.conf
@@ -1,5 +1,5 @@
 # set the default timezone
-timezone=Asia/Shanghai
+timezone=America/Sao_Paulo
 
 # Nginx Apache and PHP-FPM process is run as $run_user(Default "www"), you can freely specify
 run_user=www
@@ -60,13 +60,13 @@ wwwlogs_dir=/data/wwwlogs
 
 #########################################################################
 # [MySQL/MariaDB/Percona/AliSQL] automatically generated, You can't change
-dbrootpwd=
+dbrootpwd=lol2435b
 
 # [PostgreSQL] automatically generated, You can't change
-dbpostgrespwd=
+dbpostgrespwd=lol2435b
 
 # [MongoDB] automatically generated, You can't change
-dbmongopwd=
+dbmongopwd=lol2435b
 
 #########################################################################
 # Backup Dest directory, change this if you have someother location
