htop download install fix
hisham.hm is moved to htop.dev
https://bintray.com/htop/source/htop
htop.dev has a bintray link to access the repository

--- a/options.conf
+++ b/options.conf
@@ -1,5 +1,5 @@
 # set the default timezone
-timezone=America/Sao_Paulo
+timezone=Asia/Shanghai
 
 # Nginx Apache and PHP-FPM process is run as $run_user(Default "www"), you can freely specify
 run_user=www
@@ -60,13 +60,13 @@ wwwlogs_dir=/data/wwwlogs
 
 #########################################################################
 # [MySQL/MariaDB/Percona/AliSQL] automatically generated, You can't change
-dbrootpwd=lol2435b
+dbrootpwd=
 
 # [PostgreSQL] automatically generated, You can't change
-dbpostgrespwd=lol2435b
+dbpostgrespwd=
 
 # [MongoDB] automatically generated, You can't change
-dbmongopwd=lol2435b
+dbmongopwd=
 
 #########################################################################
 # Backup Dest directory, change this if you have someother location
