--- a/options.conf
+++ b/options.conf
@@ -1,5 +1,5 @@
 # set the default timezone
-timezone=America/Sao_Paulo
+timezone=Asia/Shanghai
 
 # Nginx Apache and PHP-FPM process is run as $run_user(Default "www"), you can freely specify
 run_user=www
@@ -54,11 +54,6 @@ mongo_data_dir=/data/mongodb
 
 # web directory, you can customize
 wwwroot_dir=/data/wwwroot
-
-#laravel multitenancy directory
-
-laravel_multitenancy=/default/public
-
 
 # nginx Generate a log storage directory, you can freely specify.
 wwwlogs_dir=/data/wwwlogs
