--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 #Use text output with \n on breakline
+#REMOTE FIXUP
 DOMAINS_API=https://example.com/api/domains
 INSTALL_DIR=/root/lnmp/
 TENANT_DOMAIN=example.com
