--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Use text output with \n on breakline
 #renote Fix
-DOMAINS_API=https://xmember.ga/settings/api/domains
+DOMAINS_API=https://xmembros.com/settings/api/domains
 INSTALL_DIR=/root/lnmp/
-TENANT_DOMAIN=xmember.ga
+TENANT_DOMAIN=xmembros.com
