--- a/config/laravel.conf
+++ b/config/laravel.conf
@@ -1,3 +1,7 @@
+add_header X-Frame-Options "SAMEORIGIN";
+add_header X-XSS-Protection "1; mode=block";
+add_header X-Content-Type-Options "nosniff";
+
 location / {
-  try_files $uri $uri/ /index.php?$query_string;
+  try_files $uri /public/index.php?$query_string;
 }
