--- a/config/laravel.conf
+++ b/config/laravel.conf
@@ -3,5 +3,5 @@ add_header X-XSS-Protection "1; mode=block";
 add_header X-Content-Type-Options "nosniff";
 
 location / {
-  try_files $uri /public/index.php?$query_string;
+  try_files $uri $uri/ /index.php?$query_string;
 }
