--- a/config/laravel.conf
+++ b/config/laravel.conf
@@ -5,3 +5,8 @@ add_header X-Content-Type-Options "nosniff";
 location / {
   try_files $uri $uri/ /index.php?$query_string;
 }
+
+location = /favicon.ico { access_log off; log_not_found off; }
+location = /robots.txt  { access_log off; log_not_found off; }
+
+error_page 404 /index.php;
